<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VehicleTracker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="use_compass">Use Compass</string>
    <string name="use_orientation">Use Orientation</string>
    <string name="service_running">Running...</string>

</resources>
