<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_service" />

    <Button
        android:id="@+id/btnStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnStart"
        android:layout_below="@+id/btnStart"
        android:layout_marginTop="14dp"
        android:text="@string/stop_service" />

    <CheckBox
        android:id="@+id/cboCompass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnStop"
        android:layout_below="@+id/btnStop"
        android:layout_marginTop="26dp"
        android:text="@string/use_compass" />

    <TextView
        android:id="@+id/txtStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnStart"
        android:layout_alignBottom="@+id/btnStart"
        android:layout_toRightOf="@+id/cboOrientation"
        android:text="@string/service_running"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#006400" />

    <CheckBox
        android:id="@+id/cboOrientation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cboCompass"
        android:layout_alignBottom="@+id/cboCompass"
        android:layout_alignParentRight="true"
        android:text="@string/use_orientation" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnStart"
        android:layout_alignBottom="@+id/btnStart"
        android:layout_alignLeft="@+id/cboOrientation"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#f00000" />

    <EditText
        android:id="@+id/txtLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cboCompass"
        android:layout_marginTop="116dp"
        android:ems="10"
        android:inputType="textMultiLine|textImeMultiLine"
        android:lines="50"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical"
        android:textSize="12sp"
        android:width="300dp" >
        <requestFocus />
    </EditText>

</RelativeLayout>